--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="Medical Tourism">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <title>medical_tourism_mgt</title>
+    <title>Medical Tourism</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
