--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,11 @@
     <title>Medical Tourism</title>
     <link rel="manifest" href="manifest.json">
 
+    <script src="https://unpkg.com/cornerstone-core@2.4.0/dist/cornerstone.min.js"></script>
+    <script src="https://unpkg.com/cornerstone-math@0.1.10/dist/cornerstoneMath.min.js"></script>
+    <script src="https://unpkg.com/cornerstone-wado-image-loader@3.0.0/dist/cornerstoneWADOImageLoader.min.js"></script>
+    <script src="https://unpkg.com/dicom-parser@1.8.1/dist/dicomParser.min.js"></script>
+
     <script>
         // The value below is injected by flutter build, do not touch.
         const serviceWorkerVersion = null;
@@ -99,6 +104,14 @@
         background-color: #042a49;
           }
     }
+  #dicomImage {
+    width: 500px;  /* Set explicit width */
+    height: 500px; /* Set explicit height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
   </style>
   <script id="splash-screen-script">
     function removeSplashFromWeb() {
@@ -114,12 +127,9 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
-  
-  
-  
 
 
-
+  <div id="dicomImage" style="width:500px; height:500px;"></div>
 <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -135,6 +145,29 @@
       });
     });
 </script>
+
+  <script>
+      window.loadAndViewDICOM = function(dicomBlob) {
+        console.log("JavaScript function loadAndViewDICOM called with DICOM Blob.");
+
+        const element = document.getElementById("dicomImage");
+        cornerstone.enable(element);
+        console.log("Cornerstone enabled on element.");
+
+        const objectUrl = URL.createObjectURL(dicomBlob);
+        const imageId = 'wadouri:' + objectUrl;
+        console.log("Image URL created:", imageId);
+
+        cornerstone.loadAndCacheImage(imageId).then(function (image) {
+          console.log("DICOM image loaded successfully:", image);
+          cornerstone.displayImage(element, image);
+          URL.revokeObjectURL(objectUrl);
+          console.log("Object URL revoked.");
+        }).catch(function (error) {
+          console.error("Error loading DICOM image:", error);
+        });
+      };
+  </script>
 
 
 
