--- a/web/index.html
+++ b/web/index.html
@@ -17,10 +17,12 @@
     <title>Medical Tourism</title>
     <link rel="manifest" href="manifest.json">
 
-    <script src="https://unpkg.com/cornerstone-core@2.4.0/dist/cornerstone.min.js"></script>
-    <script src="https://unpkg.com/cornerstone-math@0.1.10/dist/cornerstoneMath.min.js"></script>
-    <script src="https://unpkg.com/cornerstone-wado-image-loader@3.0.0/dist/cornerstoneWADOImageLoader.min.js"></script>
-    <script src="https://unpkg.com/dicom-parser@1.8.1/dist/dicomParser.min.js"></script>
+    <!-- In the <head> section -->
+<script src="https://unpkg.com/cornerstone-core/dist/cornerstone.min.js"></script>
+<script src="https://unpkg.com/cornerstone-math/dist/cornerstoneMath.min.js"></script>
+<script src="https://unpkg.com/cornerstone-tools/dist/cornerstoneTools.min.js"></script>
+<script src="https://unpkg.com/dicom-parser/dist/dicomParser.min.js"></script>
+<script src="https://unpkg.com/cornerstone-wado-image-loader/dist/cornerstoneWADOImageLoader.min.js"></script>
 
     <script>
         // The value below is injected by flutter build, do not touch.
@@ -146,28 +148,14 @@
     });
 </script>
 
-  <script>
-      window.loadAndViewDICOM = function(dicomBlob) {
-        console.log("JavaScript function loadAndViewDICOM called with DICOM Blob.");
-
-        const element = document.getElementById("dicomImage");
-        cornerstone.enable(element);
-        console.log("Cornerstone enabled on element.");
-
-        const objectUrl = URL.createObjectURL(dicomBlob);
-        const imageId = 'wadouri:' + objectUrl;
-        console.log("Image URL created:", imageId);
-
-        cornerstone.loadAndCacheImage(imageId).then(function (image) {
-          console.log("DICOM image loaded successfully:", image);
-          cornerstone.displayImage(element, image);
-          URL.revokeObjectURL(objectUrl);
-          console.log("Object URL revoked.");
-        }).catch(function (error) {
-          console.error("Error loading DICOM image:", error);
-        });
-      };
-  </script>
+  <!-- Add this script at the end of body -->
+<script>
+  // Initialize cornerstone
+  window.onload = function() {
+    cornerstoneWADOImageLoader.external.cornerstone = cornerstone;
+    cornerstoneWADOImageLoader.initializeWebWorkers();
+  }
+</script>
 
 
 
