--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
     <base href="$FLUTTER_BASE_HREF">
 
     <meta charset="UTF-8">
@@ -21,108 +23,110 @@
         // The value below is injected by flutter build, do not touch.
         const serviceWorkerVersion = null;
     </script>
+    <!-- IMPORTANT: load pdfjs files -->
+    <script
+            src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js"
+            type="text/javascript"
+    ></script>
+    <script type="text/javascript">
+        pdfjsLib.GlobalWorkerOptions.workerSrc =
+          "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.worker.min.js";
+        pdfRenderOptions = {
+          // where cmaps are downloaded from
+          cMapUrl: "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/cmaps/",
+          // The cmaps are compressed in the case
+          cMapPacked: true,
+          // any other options for pdfjsLib.getDocument.
+          // params: {}
+        };
+    </script>
+
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer=""></script>
 
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport">
 
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <style id="splash-screen-style">
+        html {
+          height: 100%
+        }
 
+        body {
+          margin: 0;
+          min-height: 100%;
+          background-color: #ffffff;
+              background-size: 100% 100%;
+        }
 
-    
-    
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <style id="splash-screen-style">
-    html {
-      height: 100%
-    }
+        .center {
+          margin: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+        }
 
-    body {
-      margin: 0;
-      min-height: 100%;
-      background-color: #ffffff;
-          background-size: 100% 100%;
-    }
+        .contain {
+          display:block;
+          width:100%; height:100%;
+          object-fit: contain;
+        }
 
-    .center {
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-    }
+        .stretch {
+          display:block;
+          width:100%; height:100%;
+        }
 
-    .contain {
-      display:block;
-      width:100%; height:100%;
-      object-fit: contain;
-    }
+        .cover {
+          display:block;
+          width:100%; height:100%;
+          object-fit: cover;
+        }
 
-    .stretch {
-      display:block;
-      width:100%; height:100%;
-    }
+        .bottom {
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+        }
 
-    .cover {
-      display:block;
-      width:100%; height:100%;
-      object-fit: cover;
-    }
+        .bottomLeft {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+        }
 
-    .bottom {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
+        .bottomRight {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+        }
 
-    .bottomLeft {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-
-    .bottomRight {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #042a49;
-          }
-    }
-  </style>
-  <script id="splash-screen-script">
-    function removeSplashFromWeb() {
-      document.getElementById("splash")?.remove();
-      document.getElementById("splash-branding")?.remove();
-      document.body.style.background = "transparent";
-    }
-  </script>
+        @media (prefers-color-scheme: dark) {
+          body {
+            background-color: #042a49;
+              }
+        }
+    </style>
+    <script id="splash-screen-script">
+        function removeSplashFromWeb() {
+          document.getElementById("splash")?.remove();
+          document.getElementById("splash-branding")?.remove();
+          document.body.style.background = "transparent";
+        }
+    </script>
 </head>
 <body>
-  <picture id="splash">
-      <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x" media="(prefers-color-scheme: light)">
-      <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
-      <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
-  </picture>
-  
-  
-  
+<picture id="splash">
+    <source srcset="splash/img/light-1x.png 1x, splash/img/light-2x.png 2x, splash/img/light-3x.png 3x, splash/img/light-4x.png 4x"
+            media="(prefers-color-scheme: light)">
+    <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x"
+            media="(prefers-color-scheme: dark)">
+    <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
+</picture>
 
 
 <script>
@@ -141,32 +145,13 @@
     });
 </script>
 
-  <!-- Add this script at the end of body -->
+<!-- Add this script at the end of body -->
 <script>
-  // Initialize cornerstone
-  window.onload = function() {
-    cornerstoneWADOImageLoader.external.cornerstone = cornerstone;
-    cornerstoneWADOImageLoader.initializeWebWorkers();
-  }
+    // Initialize cornerstone
+    window.onload = function() {
+      cornerstoneWADOImageLoader.external.cornerstone = cornerstone;
+      cornerstoneWADOImageLoader.initializeWebWorkers();
+    }
 </script>
-
-
-  <!-- IMPORTANT: load pdfjs files -->
-  <script
-          src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js"
-          type="text/javascript"
-  ></script>
-  <script type="text/javascript">
-      pdfjsLib.GlobalWorkerOptions.workerSrc =
-        "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.worker.min.js";
-      pdfRenderOptions = {
-        // where cmaps are downloaded from
-        cMapUrl: "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/cmaps/",
-        // The cmaps are compressed in the case
-        cMapPacked: true,
-        // any other options for pdfjsLib.getDocument.
-        // params: {}
-      };
-  </script>
-
-</body></html>
+</body>
+</html>
