--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,6 @@
     <title>Medical Tourism</title>
     <link rel="manifest" href="manifest.json">
 
-    <script>
-        // The value below is injected by flutter build, do not touch.
-        const serviceWorkerVersion = null;
-    </script>
     <!-- IMPORTANT: load pdfjs files -->
     <script
             src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js"
@@ -39,6 +35,11 @@
           // any other options for pdfjsLib.getDocument.
           // params: {}
         };
+    </script>
+
+    <script>
+        // The value below is injected by flutter build, do not touch.
+        const serviceWorkerVersion = null;
     </script>
 
     <!-- This script adds the flutter initialization JS code -->
@@ -128,7 +129,24 @@
     <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
 </picture>
 
-
+<!-- IMPORTANT: load pdfjs files -->
+<script
+        src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js"
+        type="text/javascript"
+></script>
+<script type="text/javascript">
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
+      "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.worker.min.js";
+    pdfRenderOptions = {
+      // where cmaps are downloaded from
+      cMapUrl: "https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/cmaps/",
+      // The cmaps are compressed in the case
+      cMapPacked: true,
+      // any other options for pdfjsLib.getDocument.
+      // params: {}
+    };
+</script>
+<script src="main.dart.js" type="application/javascript"></script>
 <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
